fix content overflow in blog post layout

--- a/src/views/blog-post/blog-post-layout/blog-post-layout.module.scss
+++ b/src/views/blog-post/blog-post-layout/blog-post-layout.module.scss
@@ -9,6 +9,7 @@
 .content {
 	max-width: 100%;
 	flex-basis: 100%;
+	min-width: 0;
 }
 
 .sidebarLeft, .sidebarRight {
